new proj/src/objects/GE_HQ_State__c.object
<CustomObject>
    <fields>
        <fullName>GE_HQ_Country__c</fullName>
        <label>Country</label>
        <referenceTo>GE_HQ_Country__c</referenceTo>
        <relationshipLabel>States</relationshipLabel>
        <relationshipName>States</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>GE_HQ_ISO_Code__c</fullName>
        <externalId>true</externalId>
        <label>ISO Code</label>
        <length>6</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>State</label>
    <listViews>
        <fullName>All</fullName>
        <columns>GE_HQ_ISO_Code__c</columns>
        <columns>NAME</columns>
        <columns>GE_HQ_Country__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>State Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>States</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>